--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 .custom-control-button {
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    font-weight: 700;
-    font-size: 10px;
-    box-sizing: border-box;
-    margin: auto;
-  }
-  .custom-control-button:hover {
-    background-color: #33373e !important;
-  }
-  
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 8px; /* Adjust font size for better fit */
+  box-sizing: border-box;
+  margin: 2px; /* Adjust margin for spacing */
+  padding: 0; /* Ensure no additional padding */
+}
+.custom-control-button:hover {
+  background-color: #33373e !important;
+}
